# vest

./: .gitignore  README.md  generate-release-artifact.sh  meson.build  test_results.xml
.github/actions/: build.yml  prepare-host.yml
.github/actions/create-artifact/: action.yml
.github/actions/prepare-host/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: CI.yml  release.yml
src/: assert.vala  errors.vala  methodMock.vala  testCaseRunner.vala  testSuite.vala  vest.vala
src/case/: testCaseDescriptor.vala  testCaseResult.vala  testCaseRunner.vala
src/filesystem/: IFileSystemWrapper.vala  fileSystemWrapper.vala
src/methodMock/: arglessMethodMock.vala  methodMock.vala  methodMockArguments.vala  methodMockN.vala  objectToString.vala  voidArglessMethodMock.vala  voidMethodMock.vala  voidMethodMockN.vala
src/presenter/: IPresenter.vala  consolePresenter.vala  xunitPresenter.vala
src/results/: testCaseResult.vala  testCaseState.vala  testSuiteResult.vala
src/suite/: testSuite.vala
templates/: meson.build  testSuiteTemplate.vala  vestRunner.vala
test/: assertionTest.vala  methodMockTest.vala  suiteTest.vala  testRunner.vala  vestRunner.vala  xunitPresenterTest.vala
